--- a/computer-database/pom.xml
+++ b/computer-database/pom.xml
@@ -8,14 +8,35 @@
   <name>computer-database Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-   <dependency>
+  	   <dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
 		<version>3.8.1</version>
 		<scope>test</scope>
     </dependency>
-	</dependencies>
+    <dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.1.34</version>
+	</dependency>
+	<dependency>
+	     <groupId>javax.servlet</groupId>
+	    <artifactId>jstl</artifactId>
+	    <version>1.2</version>
+	</dependency>
+	
+  </dependencies>
   <build>
-    <finalName>computer-database</finalName>
-  </build>
+    <plugins>
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+            <source>1.7</source>
+            <target>1.7</target>
+        </configuration>
+    </plugin>
+    </plugins>
+</build>
 </project>
