--- a/computer-database/pom.xml
+++ b/computer-database/pom.xml
@@ -20,9 +20,16 @@
 	    <version>5.1.34</version>
 	</dependency>
 	<dependency>
-	     <groupId>javax.servlet</groupId>
-	    <artifactId>jstl</artifactId>
-	    <version>1.2</version>
+	  <groupId>jstl</groupId>
+	  <artifactId>jstl</artifactId>
+	  <version>1.2</version>
+	  <scope>compile</scope>
+	</dependency>
+	<dependency>
+	  <groupId>taglibs</groupId>
+	  <artifactId>standard</artifactId>
+	  <version>1.1.2</version>
+	  <scope>compile</scope>
 	</dependency>
 	
   </dependencies>
