--- a/computer-database/src/main/webapp/WEB-INF/web.xml
+++ b/computer-database/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,10 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   	<servlet-name>ListOfComputer</servlet-name>
   	<servlet-class>com.excilys.computerdatabase.controller.ListOfComputer</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>EditComputer</servlet-name>
+  	<servlet-class>com.excilys.computerdatabase.controller.EditComputer</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>AddComputer</servlet-name>
   	<url-pattern>/addComputer</url-pattern>
@@ -22,5 +26,9 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   <servlet-mapping>
   	<servlet-name>ListOfComputer</servlet-name>
   	<url-pattern>/dashboard</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>EditComputer</servlet-name>
+  	<url-pattern>/editComputer</url-pattern>
   </servlet-mapping>
 </web-app>
