--- a/computer-database/pom.xml
+++ b/computer-database/pom.xml
@@ -12,7 +12,7 @@
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
 		<version>3.8.1</version>
-		<scope>test</scope>
+		<scope>provided</scope>
     </dependency>
     <dependency>
 	    <groupId>mysql</groupId>
@@ -30,6 +30,11 @@
 	  <artifactId>standard</artifactId>
 	  <version>1.1.2</version>
 	  <scope>compile</scope>
+	</dependency>
+	<dependency>
+		<groupId>commons-validator</groupId>
+		<artifactId>commons-validator</artifactId>
+		<version>1.3.1</version>
 	</dependency>
 	
   </dependencies>
