--- a/computer-database/pom.xml
+++ b/computer-database/pom.xml
@@ -36,7 +36,11 @@
 		<artifactId>commons-validator</artifactId>
 		<version>1.3.1</version>
 	</dependency>
-	
+	<dependency>
+	    <groupId>com.jolbox</groupId>
+	    <artifactId>bonecp</artifactId>
+	    <version>0.8.0.RELEASE</version>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
