--- a/computer-database/pom.xml
+++ b/computer-database/pom.xml
@@ -12,7 +12,7 @@
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
 		<version>3.8.1</version>
-		<scope>provided</scope>
+		<scope>test</scope>
     </dependency>
     <dependency>
 	    <groupId>mysql</groupId>
