--- a/computer-database/pom.xml
+++ b/computer-database/pom.xml
@@ -7,34 +7,41 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>computer-database Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+	<junit-version>3.8.1</junit-version>
+	<mysql-version>5.1.34</mysql-version>
+  	<jstl-version>1.2</jstl-version>
+  	<taglibs-version>1.1.2</taglibs-version>
+  	<commons-validator-version>1.3.1</commons-validator-version>
+  </properties>
   <dependencies>
   	   <dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
-		<version>3.8.1</version>
+		<version>${junit-version}</version>
 		<scope>test</scope>
     </dependency>
     <dependency>
 	    <groupId>mysql</groupId>
 	    <artifactId>mysql-connector-java</artifactId>
-	    <version>5.1.34</version>
+	    <version>${mysql-version}</version>
 	</dependency>
 	<dependency>
 	  <groupId>jstl</groupId>
 	  <artifactId>jstl</artifactId>
-	  <version>1.2</version>
+	  <version>${jstl-version}</version>
 	  <scope>compile</scope>
 	</dependency>
 	<dependency>
 	  <groupId>taglibs</groupId>
 	  <artifactId>standard</artifactId>
-	  <version>1.1.2</version>
+	  <version>${taglibs-version}</version>
 	  <scope>compile</scope>
 	</dependency>
 	<dependency>
 		<groupId>commons-validator</groupId>
 		<artifactId>commons-validator</artifactId>
-		<version>1.3.1</version>
+		<version>${commons-validator-version}</version>
 	</dependency>
 	<dependency>
 	    <groupId>com.jolbox</groupId>
