Header.jsp - properties ressources for boneCP config

--- a/computer-database/src/main/resources/persistence.properties
+++ b/computer-database/src/main/resources/persistence.properties
@@ -3,3 +3,6 @@ urdBddTest=jdbc:mysql://localhost/computer-database-db-test?zeroDateTimeBehavior
 user=admincdb
 password=qwerty1234
 driver=com.mysql.jdbc.Driver
+minConnectionPerPartition=5
+maxConnectionPerPartition=10
+partitionCount=1
