--- a/computer-database/pom.xml
+++ b/computer-database/pom.xml
@@ -13,9 +13,10 @@
   	<jstl-version>1.2</jstl-version>
   	<taglibs-version>1.1.2</taglibs-version>
   	<commons-validator-version>1.3.1</commons-validator-version>
+  	<spring-version>4.0.2.RELEASE</spring-version>
   </properties>
   <dependencies>
-  	   <dependency>
+  	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
 		<version>${junit-version}</version>
@@ -46,6 +47,36 @@
 	    <artifactId>bonecp</artifactId>
 	    <version>0.8.0.RELEASE</version>
 	</dependency>
+	<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring-version}</version>
+		</dependency>
+		<dependency>
+			<artifactId>spring-web</artifactId>
+			<groupId>org.springframework</groupId>
+			<version>${spring-version}</version>
+		</dependency>
+		<dependency>
+			<artifactId>spring-context</artifactId>
+			<groupId>org.springframework</groupId>
+			<version>${spring-version}</version>
+		</dependency>
+		<dependency>
+			<artifactId>spring-core</artifactId>
+			<groupId>org.springframework</groupId>
+			<version>${spring-version}</version>
+		</dependency>
+		<dependency>
+			<artifactId>spring-beans</artifactId>
+			<groupId>org.springframework</groupId>
+			<version>${spring-version}</version>
+		</dependency>
   </dependencies>
   <build>
     <plugins>
