--- a/computer-database/src/main/webapp/WEB-INF/web.xml
+++ b/computer-database/src/main/webapp/WEB-INF/web.xml
@@ -1,34 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="mywebapp"
-    version="2.4"
-    xmlns="http://java.sun.com/xml/ns/j2ee"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
- 
-http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-  <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-  	<servlet-name>EditComputer</servlet-name>
-  	<servlet-class>com.excilys.computerdatabase.controller.EditComputer</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>DeleteComputers</servlet-name>
-  	<servlet-class>com.excilys.computerdatabase.controller.DeleteComputers</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>ListOfComputer</servlet-name>
-  	<servlet-class>com.excilys.computerdatabase.controller.ListOfComputer</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>EditComputer</servlet-name>
-  	<url-pattern>/editComputer</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>DeleteComputers</servlet-name>
-  	<url-pattern>/deleteComputers</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>ListOfComputer</servlet-name>
-  	<url-pattern>/dashboard</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xmlns="http://java.sun.com/xml/ns/javaee"
+xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
+id="WebApp_ID" version="3.0">
+  	<display-name>Archetype Created Web Application</display-name>
+  	<servlet>
+		<servlet-name>EditComputer</servlet-name>
+		<servlet-class>com.excilys.computerdatabase.controller.EditComputer</servlet-class>
+  	</servlet>
+  	<servlet>
+	  	<servlet-name>DeleteComputers</servlet-name>
+	  	<servlet-class>com.excilys.computerdatabase.controller.DeleteComputers</servlet-class>
+  	</servlet>
+ 	<servlet>
+	  	<servlet-name>ListOfComputer</servlet-name>
+	  	<servlet-class>com.excilys.computerdatabase.controller.ListOfComputer</servlet-class>
+  	</servlet>
+  	<servlet>
+		<servlet-name>TestServlet</servlet-name>
+		<servlet-class>com.excilys.computerdatabase.controller.TestServlet</servlet-class>
+	</servlet>
+	
+  	<servlet-mapping>
+	  	<servlet-name>EditComputer</servlet-name>
+	  	<url-pattern>/editComputer</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>DeleteComputers</servlet-name>
+		<url-pattern>/deleteComputers</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	 	<servlet-name>ListOfComputer</servlet-name>
+	 	<url-pattern>/dashboard</url-pattern>
+  	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>TestServlet</servlet-name>
+		<url-pattern>/testSpring</url-pattern>
+	</servlet-mapping>
+	
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 </web-app>
