Spring MVC + Begin JDBCTemplate

--- a/computer-database/pom.xml
+++ b/computer-database/pom.xml
@@ -77,6 +77,16 @@
 			<groupId>org.springframework</groupId>
 			<version>${spring-version}</version>
 		</dependency>
+		<dependency>
+			<artifactId>spring-jdbc</artifactId>
+			<groupId>org.springframework</groupId>
+			<version>${spring-version}</version>
+		</dependency>
+		<dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-webmvc</artifactId>
+	        <version>${spring-version}</version>
+	    </dependency>
   </dependencies>
   <build>
     <plugins>
