--- a/computer-database/src/main/webapp/WEB-INF/web.xml
+++ b/computer-database/src/main/webapp/WEB-INF/web.xml
@@ -7,40 +7,24 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 id="WebApp_ID" version="3.0">
   	<display-name>Archetype Created Web Application</display-name>
   	<servlet>
-		<servlet-name>EditComputer</servlet-name>
-		<servlet-class>com.excilys.computerdatabase.controller.EditComputer</servlet-class>
+  		<servlet-name>dispatcher</servlet-name>
+  		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  		<load-on-startup>1</load-on-startup>
   	</servlet>
-  	<servlet>
-	  	<servlet-name>DeleteComputers</servlet-name>
-	  	<servlet-class>com.excilys.computerdatabase.controller.DeleteComputers</servlet-class>
-  	</servlet>
- 	<servlet>
-	  	<servlet-name>ListOfComputer</servlet-name>
-	  	<servlet-class>com.excilys.computerdatabase.controller.ListOfComputer</servlet-class>
-  	</servlet>
-  	<servlet>
-		<servlet-name>TestServlet</servlet-name>
-		<servlet-class>com.excilys.computerdatabase.controller.TestServlet</servlet-class>
-	</servlet>
-	
+  	
   	<servlet-mapping>
-	  	<servlet-name>EditComputer</servlet-name>
-	  	<url-pattern>/editComputer</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>DeleteComputers</servlet-name>
-		<url-pattern>/deleteComputers</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-	 	<servlet-name>ListOfComputer</servlet-name>
-	 	<url-pattern>/dashboard</url-pattern>
+  		<servlet-name>dispatcher</servlet-name>
+  		<url-pattern>/</url-pattern>
   	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>TestServlet</servlet-name>
-		<url-pattern>/testSpring</url-pattern>
-	</servlet-mapping>
-	
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+  	
+  	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+  	</context-param>
+ 
+  	<listener>
+       <listener-class>
+          org.springframework.web.context.ContextLoaderListener
+       </listener-class>
+  	</listener>
 </web-app>
