--- a/computer-database/src/main/webapp/WEB-INF/web.xml
+++ b/computer-database/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,14 @@ id="WebApp_ID" version="3.0">
   		<servlet-name>dispatcher</servlet-name>
   		<url-pattern>/</url-pattern>
   	</servlet-mapping>
-  	
+	<servlet-mapping>
+	    <servlet-name>default</servlet-name>
+	    <url-pattern>*.css</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	    <servlet-name>default</servlet-name>
+	    <url-pattern>*.js</url-pattern>
+	</servlet-mapping>
   	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
