--- a/computer-database/pom.xml
+++ b/computer-database/pom.xml
@@ -42,6 +42,7 @@
 		<artifactId>commons-validator</artifactId>
 		<version>${commons-validator-version}</version>
 	</dependency>
+	
 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-context</artifactId>
@@ -62,6 +63,17 @@
         <artifactId>spring-webmvc</artifactId>
         <version>${spring-version}</version>
     </dependency>
+    
+	<dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>4.3.5.Final</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.hibernate</groupId>
+    	<artifactId>hibernate-validator</artifactId>
+    	<version>5.0.1.Final</version>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
