--- a/computer-database/src/main/webapp/WEB-INF/web.xml
+++ b/computer-database/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,12 @@ xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
 id="WebApp_ID" version="3.0">
-  	<display-name>Archetype Created Web Application</display-name>
+  	<display-name>Computer Database</display-name>
+  	
   	<servlet>
   		<servlet-name>dispatcher</servlet-name>
   		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-  		<load-on-startup>1</load-on-startup>
   	</servlet>
-  	
   	<servlet-mapping>
   		<servlet-name>dispatcher</servlet-name>
   		<url-pattern>/</url-pattern>
@@ -24,11 +23,11 @@ id="WebApp_ID" version="3.0">
 	    <servlet-name>default</servlet-name>
 	    <url-pattern>*.js</url-pattern>
 	</servlet-mapping>
+	
   	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+		<param-value>classpath*:/applicationContext.xml</param-value>
   	</context-param>
- 
   	<listener>
        <listener-class>
           org.springframework.web.context.ContextLoaderListener
