--- a/computer-database/src/main/webapp/WEB-INF/web.xml
+++ b/computer-database/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,10 @@ id="WebApp_ID" version="3.0">
 	
   	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:/applicationContext.xml</param-value>
+		<param-value>
+			classpath*:/applicationContext.xml
+			/WEB-INF/dispatcher-servlet.xml
+		</param-value>
   	</context-param>
   	<listener>
        <listener-class>
