--- a/computer-database/pom.xml
+++ b/computer-database/pom.xml
@@ -63,6 +63,11 @@
         <artifactId>spring-webmvc</artifactId>
         <version>${spring-version}</version>
     </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>4.0.1.RELEASE</version>
+    </dependency>
     
 	<dependency>
         <groupId>org.hibernate</groupId>
