--- a/computer-database/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/computer-database/webapp/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,11 @@ id="WebApp_ID" version="3.0">
   	<servlet>
   		<servlet-name>dispatcher</servlet-name>
   		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+		</init-param>
+<load-on-startup>1</load-on-startup>
   	</servlet>
   	<servlet-mapping>
   		<servlet-name>dispatcher</servlet-name>
@@ -35,8 +40,7 @@ id="WebApp_ID" version="3.0">
   	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath*:/applicationContext.xml
-			/WEB-INF/dispatcher-servlet.xml
+			classpath*:/service-context.xml
 		</param-value>
   	</context-param>
   	<listener>
