--- a/computer-database/pom.xml
+++ b/computer-database/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.0</version>
 	<name>computer-database Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<modules>
 		<module>webapp</module>
 		<module>core</module>
@@ -16,12 +16,12 @@
 		<module>binding</module>
 		<module>console</module>
 	</modules>
-	
+
 	<properties>
-		
+
 		<project-groupId>com.excilys.computerdatabase</project-groupId>
 		<project-version>1.0</project-version>
-	
+
 		<junit-version>3.8.1</junit-version>
 		<mysql-version>5.1.34</mysql-version>
 		<jstl-version>1.2</jstl-version>
@@ -29,10 +29,11 @@
 		<commons-validator-version>1.3.1</commons-validator-version>
 		<spring-version>4.0.2.RELEASE</spring-version>
 		<querydsl-version>3.6.2</querydsl-version>
+		<spring-security-version>3.2.6.RELEASE</spring-security-version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
-			
+
 			<dependency>
 				<groupId>${project-groupId}</groupId>
 				<artifactId>core</artifactId>
@@ -53,7 +54,7 @@
 				<artifactId>binding</artifactId>
 				<version>${project-version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
@@ -81,6 +82,11 @@
 				<version>${commons-validator-version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+				<version>${spring-version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
@@ -129,6 +135,30 @@
 				<groupId>com.mysema.querydsl</groupId>
 				<artifactId>querydsl-jpa</artifactId>
 				<version>${querydsl-version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${spring-security-version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring-security-version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-taglibs</artifactId>
+				<version>${spring-security-version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-core</artifactId>
+				<version>${spring-security-version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
