--- a/computer-database/service/pom.xml
+++ b/computer-database/service/pom.xml
@@ -17,6 +17,11 @@
 			<artifactId>persistence</artifactId>
 		</dependency>
 		
+				
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
