--- a/computer-database/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/computer-database/webapp/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@ id="WebApp_ID" version="3.0">
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
 		</init-param>
-<load-on-startup>1</load-on-startup>
+		<load-on-startup>1</load-on-startup>
   	</servlet>
   	<servlet-mapping>
   		<servlet-name>dispatcher</servlet-name>
@@ -41,11 +41,24 @@ id="WebApp_ID" version="3.0">
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			classpath*:/service-context.xml
+			/WEB-INF/spring-security.xml
 		</param-value>
   	</context-param>
+  	
   	<listener>
        <listener-class>
           org.springframework.web.context.ContextLoaderListener
        </listener-class>
   	</listener>
+  	
+  	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
+		</filter-class>
+	</filter>
+ 
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
