error messages custom

--- a/computer-database/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/computer-database/webapp/src/main/webapp/WEB-INF/web.xml
@@ -61,4 +61,19 @@ id="WebApp_ID" version="3.0">
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/404.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>403</error-code>
+		<location>/WEB-INF/views/403.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/WEB-INF/views/500.jsp</location>
+	</error-page>
 </web-app>
